# aoc2023

./: .gitignore  Cargo.toml  README.md
day1/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/src/: lib.rs
day3/: Cargo.toml
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
src/: main.rs
utils/src/: lib.rs
