[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["day1", "day2", "utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1 = { path = "./day1" }
day2 = { path = "./day2" }
utils = { path = "./utils" }
